#
# $Header: /home/cvs/d4x/main/face/Makefile.am,v 1.1.1.1 2004/07/01 15:41:41 max Exp $
#

include $(top_srcdir)/admin/Makefile.addons

MAINTAINERCLEANFILES = Makefile.in
CLEANFILES = *~

EXTRA_DIST           = pixmaps pixmaps2

noinst_LIBRARIES     = libface.a

if EXTRA_OPTIMIZE
libface_a_SOURCES    = libface_a.all_cc.cc
else
libface_a_SOURCES    = $(libface_a_SOURCES_LIST)
endif

libface_a_SOURCES_LIST = $(strip      \
  about.cc     fsched.cc  misc.cc     \
  addd.cc      fsface.cc  mywidget.cc \
  buttons.cc   graph.cc   passface.cc \
  colors.cc    list.cc    prefs.cc    \
  filtrgui.cc  lmenu.cc   qtree.cc    \
  dndtrash.cc  lod.cc     saveload.cc \
  edit.cc      log.cc     themes.cc   \
)

noinst_HEADERS = $(strip              \
  about.h     fsched.h  misc.h        \
  addd.h      fsface.h  mywidget.h    \
  buttons.h   graph.h   passface.h    \
  colors.h    list.h    prefs.h       \
  filtrgui.h  lmenu.h   qtree.h       \
  dndtrash.h  lod.h     saveload.h    \
  edit.h      log.h     themes.h      \
)

# HINT:
# We can use fact that all files in this directory
# have the same name for 2 extensions (*.cc | *.h)
# and use this in the following trick:
#
# noinst_HEADERS = $(patsubst %.cc, %.h, $(libface_a_SOURCES))
#
# this helps us to avoid maintain 2 lists (long lists :) of files
# and exclude possible errors (i.e. unsyncronized lists)
#

#
# Rule to join all sources in one compilation unit
#
libface_a.all_cc.cc: $(srcdir)/Makefile.am
	@echo "Creating $(@) ..."; \
	echo "/* DO NOT EDIT! This file is autogenerated by 'make' from sources list... */" > $(@); \
	list="$(libface_a_SOURCES_LIST)"; \
	for i in $$list; do \
	    echo "#include \"$$i\"" >> $(@); \
	done
